--- a/.htaccess
+++ b/.htaccess
@@ -365,11 +365,9 @@ FileETag None
 <IfModule mod_rewrite.c>
   RewriteCond %{HTTPS} !=on
   RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
-	RewriteRule ^ http://%1%{REQUEST_URI} [R=301,L]
-	RewriteCond %{REQUEST_FILENAME} !/css/*
-  RewriteCond %{REQUEST_FILENAME} !/img/*
-	RewriteCond %{REQUEST_FILENAME} !/js/*
-	RewriteRule .? index.php
+  RewriteRule ^ http://%1%{REQUEST_URI} [R=301,L]
+  RewriteCond %{REQUEST_FILENAME} !^(.+)\.(js|css|png|jpg|gif|ico)$
+  RewriteRule ^(.*)$ index.php [NC]
 </IfModule>
 
 # ----------------------------------------------------------------------
